fixing minor annoyances

--- a/portal.css
+++ b/portal.css
@@ -3,6 +3,8 @@ body {
   font-family:Rubik,sans-serif;
   font-style: normal;
   font-weight:400;
+  min-height: 100vh;
+  padding-bottom: 3em;
 }
 
 a:hover { text-decoration: none; }
@@ -79,7 +81,7 @@ li > ul {
 
 
 #btnSupport {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 3px;
   border-radius: 0;
